# YTracing

./: .gitignore  AGENTS.md  AutoTracer.cpp  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh.md  Collector.cpp  Collector.h  Converter.cpp  Converter.h  LICENSE  README.md  README_zh.md  Visualizer.cpp  Visualizer.h  YTracing.h  main.cpp  main_visualizer.cpp
cmake/: cmake_uninstall.cmake.in
debian/: changelog  control  copyright  libytracing-dev.install  rules  ytracing-tools.install
examples/: CMakeLists.txt  test.cpp
src/: AutoTracer.cpp  CMakeLists.txt  Collector.cpp  Collector.h  Converter.cpp  Converter.h  YTracing.h  YTracingConfig.cmake.in
tools/: CMakeLists.txt  YViewer.cpp
